--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,7 +4,7 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = crawler.settings
+default = utils.settings.crawler
 
 [deploy]
 #url = http://localhost:6800/
